namespaces/live.cloud-platform.service.justice.gov.uk/laa-civil-manage-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-civil-manage-staging"
  labels:
    component: "laa-civil-manage-staging"
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-manage-civil-application"
    cloud-platform.justice.gov.uk/application: "LAA Manage A Civil Application"
    cloud-platform.justice.gov.uk/owner: "Manage a Civil Application: manageacivilapplication@justiceuk.onmicrosoft.com"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-civil-manage"
    cloud-platform.justice.gov.uk/team-name: "laa-civil-manage-an-application"
    cloud-platform.justice.gov.uk/review-after: ""
